--- a/res/layout/gamesurface.xml
+++ b/res/layout/gamesurface.xml
@@ -20,7 +20,7 @@
 	<LinearLayout
 	     android:id="@+id/llButtons"
         style="@style/GameBoardButtonAreaStyle">
-	<com.riotapps.word.ui.ScoreboardButton 
+	<Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bPlayedWords"
         android:layout_width="0dp" 
@@ -28,7 +28,7 @@
         android:text="@string/gameboard_played_words_button_text"
         
     />
- 	<com.riotapps.word.ui.ScoreboardButton 
+ 	<Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bHopperPeek"
         android:layout_width="0dp" 
@@ -36,42 +36,42 @@
         android:text="@string/gameboard_hopper_peek_button_text"
      
     />
-	  <com.riotapps.word.ui.ScoreboardButton 
+	  <Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bRecall"
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_recall_button_text"
     />
-	<com.riotapps.word.ui.ScoreboardButton 
+	<Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bShuffle"
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_shuffle_button_text"
     />
-	<com.riotapps.word.ui.ScoreboardButton 
+	<Button
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bSwap"
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_swap_button_text"
     />
-	<com.riotapps.word.ui.ScoreboardButton 
+	<Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bPlay"
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_play_button_text"
     />
-	<com.riotapps.word.ui.ScoreboardButton 
+	<Button 
   	    style="@style/GameBoardButtonStyle"
   	    android:id="@+id/bSkip"
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_skip_button_text"
     />
-    <com.riotapps.word.ui.ScoreboardButton 
+    <Button 
         style="@style/GameBoardButtonStyle"
         android:id="@+id/bCancel"
         android:layout_width="0dp"
@@ -79,7 +79,7 @@
         android:text="@string/gameboard_cancel_button_text"
     />
 
-   <com.riotapps.word.ui.ScoreboardButton 
+   <Button
         style="@style/GameBoardButtonStyle"
         android:id="@+id/bResign"
         android:layout_width="0dp"
