--- a/res/layout/completedgames.xml
+++ b/res/layout/completedgames.xml
@@ -36,7 +36,7 @@
 				 android:layout_height="wrap_content"
 		
 	>
-		<com.riotapps.word.ui.MainFontTextView
+		<TextView
 		        style="@style/ContentAreaTextTopStyle"
 		           android:paddingTop="0dp"
 		        android:layout_height="12dp"
