--- a/res/layout/gamelookupitem.xml
+++ b/res/layout/gamelookupitem.xml
@@ -11,14 +11,14 @@
     android:layout_marginBottom="2dp" 
     android:paddingLeft="2dp" 
     android:id="@+id/rlItem" >
-	 <com.riotapps.word.ui.ScoreboardFontTextView
+	 <TextView
          style="@style/TextStyle"
      	android:id="@+id/tvNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="2dp"
         />
-     <com.riotapps.word.ui.ScoreboardFontTextView 
+     <TextView 
 	     style="@style/TextStyle"
 	  	 android:id="@+id/tvDefinition"
 	     android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
 	     android:layout_marginLeft="2dp"
 	     android:layout_toRightOf="@id/tvNum"
 	     />
-      <com.riotapps.word.ui.ScoreboardFontTextView 
+      <TextView 
 	     style="@style/TextMiniStyle"
 	  	 android:id="@+id/tvAttribution"
 	     android:layout_width="wrap_content"
