--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -15,7 +15,7 @@
          android:id="@+id/logo"
 	     style="@style/TopLogoStyle"  
 	    />
-       <com.riotapps.word.ui.MainFontTextView
+       <TextView
  			style="@style/ActivityTitleStyle"
  			android:id="@+id/tvActivityTitle"
         	android:layout_alignParentRight="true"
@@ -25,7 +25,7 @@
         	android:layout_height="wrap_content"
         />
        
-    <com.riotapps.word.ui.MainFontTextView
+    <TextView
  			android:id="@+id/tvNumWins"
         	  style="@style/MainWinsStyle"
 		 android:layout_toLeftOf="@id/options"
