--- a/res/layout/swapdialog.xml
+++ b/res/layout/swapdialog.xml
@@ -22,7 +22,7 @@
 		android:background="@drawable/alert_background"
 		android:id="@+id/header"
 	>
-    <com.riotapps.word.ui.MainFontTextView
+    <TextView
          android:id="@+id/alert_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,12 +57,12 @@
         android:id="@+id/rlLetter1"   
         android:layout_marginLeft="5dp"     
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
-              android:layout_width="42dp"
-             android:layout_height="42dp"
-              android:background="@drawable/tray_tile_bg"
-              android:id="@+id/tvLetter1"
-             android:textSize="32dp"
+        <TextView 
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:background="@drawable/tray_tile_bg"
+            android:id="@+id/tvLetter1"
+            android:textSize="32dp"
             android:gravity="center"
             android:paddingRight="4dp"
              />
@@ -84,7 +84,7 @@
         android:layout_toRightOf="@id/rlLetter1"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -111,7 +111,7 @@
         android:layout_toRightOf="@id/rlLetter2"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -138,7 +138,7 @@
         android:layout_toRightOf="@id/rlLetter3"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -165,7 +165,7 @@
         android:layout_toRightOf="@id/rlLetter4"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -192,7 +192,7 @@
         android:layout_toRightOf="@id/rlLetter5"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -220,7 +220,7 @@
         android:layout_toRightOf="@id/rlLetter6"   
         android:layout_marginLeft="2dp"
      >
-         <com.riotapps.word.ui.ScoreboardFontTextView 
+         <TextView 
               android:layout_width="42dp"
              android:layout_height="42dp"
               android:background="@drawable/tray_tile_bg"
@@ -244,21 +244,21 @@
            
     </RelativeLayout>
    
-     <RelativeLayout  
-    android:layout_width="wrap_content"
+     <LinearLayout  
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/rlLetters"
     style="@style/FormButtonAreaStyle"
     >
 	     
-		<com.riotapps.word.utils.TypefaceButton 
+		<Button 
 	  	    style="@style/ButtonStyle"
 	  	    android:id="@+id/bOK"
 	        android:layout_width="0dp" 
 	        android:layout_weight="1.0"
 	        android:text="@string/gameboard_swap_dialog_button_text"
 	    />
-	    <com.riotapps.word.utils.TypefaceButton 
+	    <Button 
 	  	    style="@style/ButtonStyle"
 	  	    android:id="@+id/bCancel"
 	        android:layout_width="0dp" 
@@ -266,7 +266,7 @@
 	        android:text="@string/cancel"
 	    />
 	  
-    </RelativeLayout>
+    </LinearLayout>
   </RelativeLayout>
    </RelativeLayout>
  </RelativeLayout>
