--- a/res/layout/scoreboardlayout.xml
+++ b/res/layout/scoreboardlayout.xml
@@ -44,7 +44,7 @@
 		 		  android:layout_centerVertical="true"
 		          android:src="@drawable/options_sb" 
 		          android:layout_width="wrap_content"
-		        android:layout_height="fill_parent"
+		        android:layout_height="wrap_content"
 		         android:background="@drawable/options"  
 				/>
  	        
