--- a/res/layout/scoreboardlayout.xml
+++ b/res/layout/scoreboardlayout.xml
@@ -39,13 +39,7 @@
 	    >    
 	    	 <ImageButton 
 		          android:id="@+id/options"
-		          android:layout_alignParentRight="true"
-		 		   android:layout_marginLeft="4dp"
-		 		  android:layout_centerVertical="true"
-		          android:src="@drawable/options_sb" 
-		          android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		         android:background="@drawable/options"  
+				style="@style/ScoreboardOptionStyle"
 				/>
  	        
 	     	<TextView
