--- a/res/values-large/scoreboardoptionstyle.xml
+++ b/res/values-large/scoreboardoptionstyle.xml
@@ -4,7 +4,7 @@
     name="ScoreboardOptionStyle" >
    	<item name="android:layout_width">wrap_content</item>
    	<item name="android:layout_height">36dp</item>
-   	<item name="android:src">@drawable/options_sb</item>
+   	<item name="android:background">@drawable/options_sb</item>
     <item name="android:layout_marginLeft">4dp</item>
     <item name="android:layout_alignParentRight">true</item>
     <item name="android:layout_centerVertical">true</item>
