--- a/res/layout/alert.xml
+++ b/res/layout/alert.xml
@@ -41,8 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_below="@id/alert_title"
  		android:layout_marginTop="10dp"  
  		android:layout_marginBottom="10dp"  
