--- a/res/values-xlarge/gameboardbuttonareastyle.xml
+++ b/res/values-xlarge/gameboardbuttonareastyle.xml
@@ -6,6 +6,8 @@
    	<item name="android:layout_alignParentBottom">true</item>
    	<item name="android:paddingLeft">2dp</item>
    	<item name="android:paddingRight">2dp</item>
+   	<item name="android:paddingTop">6dp</item>
+   	<item name="android:paddingBottom">6dp</item>
    	   	<item name="android:layout_width">fill_parent</item>
 	<item name="android:layout_height">60dp</item>
  <item name="android:gravity">center</item>
