bugs and things

--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -4,5 +4,7 @@
      <integer name="gameboard_button_area_height">48</integer>
      <integer name="gameboard_lookup_words_width">200</integer>
      <integer name="gameboard_lookup_words_height">40</integer>
+         <integer name="derived_device_screen_size">0</integer>
+    <integer name="derived_device_resolution">0</integer>
 
 </resources>
