--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -6,5 +6,8 @@
      <integer name="gameboard_lookup_words_height">40</integer>
          <integer name="derived_device_screen_size">0</integer>
     <integer name="derived_device_resolution">0</integer>
-
+    <integer name="maxTrayTileSize">90</integer>
+ <integer name="maxDraggingTileSize">120</integer>
+ <integer name="maxGameBoardLogoHeight">60</integer>
+ <integer name="maxGameBoardTextHeight">28</integer>
 </resources>
