--- a/res/layout/gamelookup.xml
+++ b/res/layout/gamelookup.xml
@@ -73,7 +73,8 @@
 					     android:layout_height="wrap_content"
 					     android:layout_below="@id/tvWord"
 						android:paddingLeft="5dp"
-						android:paddingRight="5dp"		  
+						android:paddingRight="5dp"	
+							android:layout_marginBottom="10dp"	  
 					     
 					     />
 	 				  <TextView 
@@ -81,7 +82,7 @@
 					  	 android:id="@+id/tvNotFound"
 					     android:layout_width="fill_parent"
 					     android:layout_height="wrap_content"
-					     android:layout_below="@id/tvWord"
+					     android:layout_below="@id/tvPreviewMessage"
 					     android:paddingLeft="5dp"
 							android:paddingRight="5dp"
 					     />
