--- a/res/values/opponentchoosestyle.xml
+++ b/res/values/opponentchoosestyle.xml
@@ -3,5 +3,7 @@
 <style
     name="OpponentChooseStyle" >
 	<item name="android:textSize">12sp</item>
+	<item name="android:paddingTop">2dp</item>
+	<item name="android:paddingBottom">2dp</item>
 </style>
 </resources>
