--- a/res/values-large/scoreboardoptionstyle.xml
+++ b/res/values-large/scoreboardoptionstyle.xml
@@ -3,10 +3,10 @@
 <style
     name="ScoreboardOptionStyle" >
    	<item name="android:layout_width">wrap_content</item>
-   	<item name="android:layout_height">42dp</item>
+   	<item name="android:layout_height">wrap_content</item>
    	<item name="android:background">@drawable/options_sb</item>
-     <item name="android:layout_marginLeft">8dp</item>
-    <item name="android:layout_marginRight">4dp</item>
+     <item name="android:layout_marginLeft">10dp</item>
+    <item name="android:layout_marginRight">6dp</item>
     <item name="android:layout_alignParentRight">true</item>
     <item name="android:layout_centerVertical">true</item>
 </style>
