--- a/res/values-normal-xxhdpi/scoreboardoptionstyle.xml
+++ b/res/values-normal-xxhdpi/scoreboardoptionstyle.xml
@@ -3,7 +3,7 @@
 <style
     name="ScoreboardOptionStyle" >
    	<item name="android:layout_width">wrap_content</item>
-   	<item name="android:layout_height">36dp</item>
+   	<item name="android:layout_height">wrap_content</item>
    	<item name="android:background">@drawable/options_sb</item>
      <item name="android:layout_marginLeft">8dp</item>
     <item name="android:layout_marginRight">4dp</item>
