--- a/res/values/scoreboardlettersleftstyle.xml
+++ b/res/values/scoreboardlettersleftstyle.xml
@@ -5,6 +5,8 @@
     	<item name="android:layout_toLeftOf">@id/options</item>
    	<item name="android:textColor">@color/scoreboard_text_color</item>   	
    	<item name="android:textSize">10sp</item> 
-   	<item name="android:gravity">right</item> 
+   	<item name="android:gravity">right</item>
+   		<item name="android:layout_marginTop">0dp</item>   
+   		<item name="android:layout_marginLeft">2dp</item>
 </style>
 </resources>
