--- a/res/values/scoreboardopponentscorestyle.xml
+++ b/res/values/scoreboardopponentscorestyle.xml
@@ -3,10 +3,11 @@
 <style
     name="ScoreboardOpponentScoreStyle" >
    	<item name="android:layout_width">wrap_content</item>
-   	<item name="android:layout_height">wrap_content</item>
+   	<item name="android:layout_height">30dp</item>
    	<item name="android:layout_toRightOf">@id/tvOpponentName</item>
    	<item name="android:layout_marginTop">0dp</item>   	
-   	<item name="android:textSize">24sp</item> 
+   	<item name="android:textSize">22sp</item> 
    	<item name="android:layout_marginRight">16dp</item> 
+   	<item name="android:gravity">center_vertical</item>
 </style>
 </resources>
