--- a/res/values-xlarge-mdpi/integers.xml
+++ b/res/values-xlarge-mdpi/integers.xml
@@ -2,4 +2,8 @@
 <resources>
     <integer name="derived_device_screen_size">4</integer>
     <integer name="derived_device_resolution">2</integer>
+         <integer name="maxGameBoardLogoHeight">48</integer>
+     <integer name="maxGameBoardTextHeight">24</integer>
+      <integer name="maxDraggingTileSize">120</integer>
+      <integer name="maxTrayTileSize">90</integer>
 </resources>
