--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -9,11 +9,11 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
-           ads:adUnitId="@string/admob_pub_id_full_rules"
+           ads:adUnitId="@string/admob_pub_id_about"
            android:layout_centerHorizontal="true" 
            ads:adSize="BANNER"
            ads:testDevices="TEST_EMULATOR"
-           ads:loadAdOnCreate="true"/>
+           ads:loadAdOnCreate="false"/>
 <LinearLayout  
     android:layout_above="@id/adView" 
     style="@style/LayoutStyle"
