--- a/res/layout/gamelookup.xml
+++ b/res/layout/gamelookup.xml
@@ -13,7 +13,7 @@
            android:layout_centerHorizontal="true" 
            ads:adSize="BANNER"
            ads:testDevices="TEST_EMULATOR"
-           ads:loadAdOnCreate="true"/>
+           ads:loadAdOnCreate="false"/>
 		<LinearLayout
 		 android:layout_above="@id/adView" 
 		    style="@style/LayoutStyle" 
