--- a/res/layout/scoreboardlayout.xml
+++ b/res/layout/scoreboardlayout.xml
@@ -36,6 +36,7 @@
 	    	android:paddingRight="4dp" 
 	        android:layout_alignParentRight="true"
 	        android:paddingTop="2dp"
+	        android:layout_centerVertical="true"
 	    >    
 	    	 <ImageButton 
 		          android:id="@+id/options"
@@ -50,6 +51,7 @@
 	     	<TextView
 	            android:id="@+id/tvNumPoints"
 				style="@style/ScoreboardNumPointsStyle"
+ 
 	         />
 	    </RelativeLayout>
 </RelativeLayout>
