--- a/res/values/scoreboardoptionstyle.xml
+++ b/res/values/scoreboardoptionstyle.xml
@@ -5,10 +5,10 @@
    	<item name="android:layout_width">wrap_content</item>
    	<item name="android:layout_height">wrap_content</item>
    	<item name="android:background">@drawable/options_sb</item>
-    <item name="android:layout_marginLeft">8dp</item>
-    <item name="android:layout_marginRight">4dp</item>
+    <item name="android:layout_marginLeft">0dp</item>
+    <item name="android:layout_marginRight">0dp</item>
     <item name="android:layout_alignParentRight">true</item>
     <item name="android:layout_centerVertical">true</item>
-    
+     <item name="android:src">@drawable/options_sb</item>
 </style>
 </resources>
