--- a/res/layout/wordhintdialog.xml
+++ b/res/layout/wordhintdialog.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:id="@+id/progress_root"
+   
+    android:id="@+id/progress_root"
     style="@style/DialogStyle"
     android:background="@drawable/dialog_background"
 	>
  <RelativeLayout  
+        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 	style="@style/DialogInnerStyle"
     android:id="@+id/alert_top"
 	>
@@ -15,6 +18,11 @@
 		android:layout_height="wrap_content"
 		android:background="@drawable/alert_background"
 		android:id="@+id/header"
+	> 
+	<RelativeLayout
+ 		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+	 	android:id="@+id/header"
 	>
     <TextView
          android:id="@+id/alert_title"
@@ -33,19 +41,22 @@
         android:paddingRight="3dp"
         android:paddingTop="3dp"
 		/>
+   </RelativeLayout>
     <LinearLayout
+         android:layout_below="@id/header"
       	android:id="@+id/llHints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
- 	/>
+        android:orientation="vertical"
+   	/>
      <RelativeLayout  
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@id/alert_text"
+    android:layout_below="@id/llHints"
     >
 	     <LinearLayout
 	        style="@style/FormButtonAreaStyle"
-	 
+	   	 
  			android:id="@+id/llOK"
  		   android:gravity="center"
 	        >
