--- a/res/layout/wordhintitem.xml
+++ b/res/layout/wordhintitem.xml
@@ -3,7 +3,7 @@
 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+	android:layout_height="wrap_content"
 	android:background="@color/player_image_background_color"
     android:id="@+id/rlLineItem"
   >
@@ -11,14 +11,16 @@
 		
           <TextView
             android:id="@+id/tvWord"
-            style="@style/OpponentNameStyle"
-            android:layout_width="wrap_content"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+  
             />
   
               <TextView
             android:id="@+id/tvPoints"
-            style="@style/OpponentSkillLevelStyle"
-	            android:layout_width="wrap_content"
+ 	            android:layout_width="wrap_content"
+ 	            android:layout_height="wrap_content"
+	            android:layout_toRightOf="@id/tvWord"
            />
          
 </RelativeLayout>
