--- a/res/layout/wordhintitem.xml
+++ b/res/layout/wordhintitem.xml
@@ -4,24 +4,33 @@
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:background="@color/player_image_background_color"
+	android:background="@drawable/content_item_selector"
     android:id="@+id/rlLineItem"
+     
   >
-	      
-		
-          <TextView
+           <TextView
             android:id="@+id/tvWord"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-  
+             android:layout_width="fill_parent"
+            android:layout_height="44dp"
+  			android:layout_alignParentLeft="true"
+  			android:layout_marginLeft="8dp"
+  			android:textSize="20sp"
+  			android:textColor="@color/content_area_font_color"
+  			android:layout_centerVertical="true"
+  			android:gravity="center_vertical"
             />
   
               <TextView
             android:id="@+id/tvPoints"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
-	            android:layout_toRightOf="@id/tvWord"
+  			android:layout_alignParentRight="true"	         
+  			android:layout_marginRight="8dp"
+  			android:textSize="16sp"
+  			android:textColor="@color/content_area_font_color"
+  			android:layout_centerVertical="true"
            />
+  
          
 </RelativeLayout>
  
