--- a/res/layout/wordhintdialog.xml
+++ b/res/layout/wordhintdialog.xml
@@ -44,18 +44,30 @@
         android:paddingTop="3dp"
 		/>  
    </RelativeLayout>
+   
+	  <TextView
+       android:layout_below="@id/header"
+        android:id="@+id/description"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+		 style="@style/ContentAreaTextAreaStyle" 
+		android:text="@string/gameboard_hopper_peek_dialog_description"
+		android:paddingTop="4dp"
+		android:paddingBottom="4dp"
+		android:gravity="center"
+    />
    <ImageView
         android:id="@+id/imgHost"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/group_1_skill_level_1_main"
-        android:layout_below="@id/header"
+        android:layout_below="@id/description"
         android:paddingRight="3dp"
         android:layout_marginLeft="6dp"
         
 		/>
     <LinearLayout
-         android:layout_below="@id/header"
+         android:layout_below="@id/description"
       	android:id="@+id/llHints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
