--- a/res/layout/wordhintdialog.xml
+++ b/res/layout/wordhintdialog.xml
@@ -56,32 +56,55 @@
 		android:paddingBottom="4dp"
 		android:gravity="center"
     />
-   <ImageView
-        android:id="@+id/imgHost"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/group_1_skill_level_1_main"
-        android:layout_below="@id/description"
+	     <RelativeLayout  
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+  android:id="@+id/rlContent"
+  android:layout_below="@id/description"
+    > 
+    	
+ 	<ImageView
+        android:id="@+id/imgHinter"
+        
+        android:src="@drawable/hinter"
+       android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
         android:paddingRight="3dp"
         android:layout_marginLeft="6dp"
-        
+ 		
 		/>
-    <LinearLayout
-         android:layout_below="@id/description"
-      	android:id="@+id/llHints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/imgHost"
-   	/>
+	    <LinearLayout
+	        android:layout_alignParentTop="true"
+	      
+	      	android:id="@+id/llHints"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical"
+	           android:layout_toRightOf="@id/imgHinter"
+	   	/>
+      <TextView
+	 		android:layout_below="@id/llHints"
+	        android:id="@+id/tvInstructions"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+			 style="@style/TextMiniStyle" 
+			 android:paddingLeft="3dp"
+			android:paddingRight="3dp"
+			 
+			android:paddingTop="2dp"
+			android:paddingBottom="2dp"
+			android:gravity="center"
+	    />
+    </RelativeLayout>
      <RelativeLayout  
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@id/llHints"
+    android:layout_below="@id/rlContent"
+ 
     >
 	     <LinearLayout
 	        style="@style/FormButtonAreaStyle"
-	   	 
+	   	  
  			android:id="@+id/llOK"
  		   android:gravity="center"
 	        >
@@ -110,7 +133,7 @@
 	  	    android:id="@+id/bNoThanks"
 	        android:layout_width="120dp" 
 	        android:layout_marginLeft="4dp"
-	        android:text="@string/no_thanks"
+	        android:text="@string/cancel"
 	    />
 		
 	    </LinearLayout>
